--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "build": "tsup-node"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@fastify/cors": "^10.0.2",
     "@types/node": "^22.13.5",
     "drizzle-kit": "^0.30.5",
+    "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
